--- a/src/app/utilisateur/utilisateur.component.css
+++ b/src/app/utilisateur/utilisateur.component.css
@@ -1,6 +1,4 @@
-mat-list-item {
-  z-index: -10;
-}
+
 h1{
   text-align: center;
 }
